fixed footer whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -287,7 +287,6 @@ div.main-footer-mobile.container-fluid .row {
 }
 
 div.main-footer-mobile.container-fluid p {
-  padding-bottom: 2em;
   font-size: 0.8em;
 }
 
